--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,9 @@
-h2 {
+h1 {
         color: blue;
+}
+
+body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
 }
