--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,9 +3,10 @@
         <head>
                 <title>DASHBOARD</title>
                 <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
+                <link rel="stylesheet" type="text/css" href="public/styles/main.css">
                 <script src="public/scripts/main.js" defer></script>
         </head>
         <body>
-                <h2>DASHBOARD</h2>
+                <h1>DASHBOARD</h1>
         </body>
 </html>
