--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,8 +3,14 @@
         <head>
                 <title>LOGIN</title>
                 <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+                <link rel="stylesheet" type="text/css" href="public/styles/login.css">
         </head>
         <body>
-                <h2>LOGIN</h2>
+                <form>
+                        <h1>LOGIN</h1>
+                        <input type="email" placeholder="Email">
+                        <input type="password" placeholder="Password">
+                        <button type="submit">LOGIN</button>
+                </form>
         </body>
 </html>
