--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -4,6 +4,12 @@ form {
         padding: 1.5rem;
 
         width: 45vw;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
 }
 
 body {
