--- a/public/views/404.html
+++ b/public/views/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
         <head>
-                <title>404</title>
+                <title>Programmar</title>
                 <link rel="stylesheet" type="text/css" href="public/styles/main.css">
         </head>
         <body>
