added logout and clean popups

--- a/src/public/views/dashboard.html
+++ b/src/public/views/dashboard.html
@@ -24,6 +24,12 @@
                                         <li><a href="/courses">Courses</a></li>
                                         <li><a href="/settings">Settings</a></li>
                                 </ul>
+
+                                <div class="sidebar-footer">
+                                        <a href="/logout" class="logout-link">
+                                                <span>🚪</span> Logout
+                                        </a>
+                                </div>
                         </nav>
 
                         <main class="main-content">
