--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -8,6 +8,8 @@
                 <script src="public/scripts/login.js" defer></script>
         </head>
         <body>
+                <div id="toast-container"></div>
+
                 <form onsubmit="event.preventDefault(); login();">
                         <div class="form-logo">
                                 <?php include 'public/resources/logo.svg'; ?>
