--- a/src/public/views/courses.html
+++ b/src/public/views/courses.html
@@ -75,13 +75,16 @@
                                                         </div>
                                                 </div>
 
-                                                <?php if($course['completed_lessons'] == 0): ?>
-                                                        <button class="btn-continue" style="background-color: var(--secondary);">Start Learning</button>
-                                                <?php elseif($course['completed_lessons'] >= $course['total_lessons']): ?>
-                                                        <button class="btn-continue" style="background-color: #10b981;">Completed</button>
-                                                <?php else: ?>
-                                                        <button class="btn-continue">Continue</button>
-                                                <?php endif; ?>
+                                                <form action="/start-course" method="POST">
+                                                        <input type="hidden" name="id" value="<?= $course['id'] ?>">
+                                                        <?php if($course['completed_lessons'] == 0): ?>
+                                                                <button type="submit" class="btn-continue" style="background-color: var(--secondary);">Start Learning</button>
+                                                        <?php elseif($course['completed_lessons'] >= $course['total_lessons']): ?>
+                                                                <button type="button" class="btn-continue" style="background-color: #10b981; cursor: default;">Completed</button>
+                                                        <?php else: ?>
+                                                                <button type="submit" class="btn-continue">Continue</button>
+                                                        <?php endif; ?>
+                                                </form>
                                         </div>
                                         <?php endforeach; ?>
                                 </div>
