--- a/src/public/views/courses_catalog.html
+++ b/src/public/views/courses_catalog.html
@@ -67,11 +67,14 @@
                                                         <p><?= htmlspecialchars($course['description']); ?></p>
                                                 </div>
 
-                                                <?php if($course['completed_lessons'] > 0): ?>
-                                                        <button class="btn-continue">Continue</button>
-                                                <?php else: ?>
-                                                        <button class="btn-continue" style="background-color: var(--secondary);">Start Course</button>
-                                                <?php endif; ?>
+                                                <form action="/start-course" method="POST">
+                                                        <input type="hidden" name="id" value="<?= $course['id'] ?>">
+                                                        <?php if($course['completed_lessons'] > 0): ?>
+                                                                <button type="submit" class="btn-continue">Continue</button>
+                                                        <?php else: ?>
+                                                                <button type="submit" class="btn-continue" style="background-color: var(--secondary);">Start Course</button>
+                                                        <?php endif; ?>
+                                                </form>
                                         </div>
                                         <?php endforeach; ?>
                                 </div>
