--- a/src/public/views/dashboard.html
+++ b/src/public/views/dashboard.html
@@ -64,7 +64,7 @@
                                                                         </div>
                                                                 </div>
 
-                                                                <button class="btn-large">Continue Learning</button>
+                                                                <a href="/lesson?id=<?= $course['id']; ?>" class="btn-large" style="text-decoration:none; display:inline-block; text-align:center;">Continue Learning</a>
                                                         </div>
 
                                                         <div class="progress-circle" style="--p:<?= $course['progress']; ?>">
