--- a/src/public/views/my_courses.html
+++ b/src/public/views/my_courses.html
@@ -69,7 +69,7 @@
                                                                         <div class="progress-fill" style="width: <?= $course['progress']; ?>%"></div>
                                                                 </div>
                                                         </div>
-                                                        <button class="btn-continue">Continue</button>
+                                                        <a href="/lesson?id=<?= $course['id']; ?>" class="btn-continue" style="text-decoration:none; display:block; text-align:center;">Continue</a>
                                                 </div>
                                                 <?php endforeach; ?>
                                         <?php endif; ?>
